Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h2>
+        <p>A tornado.py web app for syncing Decss presentations.</p>
+
+<h2>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
 
 <p>This is intended to be used as an asynchronous WebSocket server for <a href="https://github.com/dryan/decss">Decss</a>.</p>
@@ -48,18 +50,22 @@
 
 <p>For the Twitter login to work, <a href="https://dev.twitter.com/apps/new">setup a new Twitter app</a>.</p>
 
-<p>DECSS_SYNC_TWITTER_API_KEY: set this to the Consumer Key from your new app
-DECSS_SYNC_TWITTER_API_SECRET: set this to the Consumer Secret from your new app</p>
+<p>DECSS_SYNC_TWITTER_API_KEY: set this to the Consumer Key from your new app</p>
+
+<p>DECSS_SYNC_TWITTER_API_SECRET: set this to the Consumer Secret from your new app</p>
 
 <h3>
 <a name="database" class="anchor" href="#database"><span class="octicon octicon-link"></span></a>Database</h3>
 
 <p>A MySQL database is required. The <code>schema.sql</code> file will setup the database schema.</p>
 
-<p>DECSS_SYNC_DATABASE_HOST
-DECSS_SYNC_DATABASE_NAME
-DECSS_SYNC_DATABASE_USER
-DECSS_SYNC_DATABASE_PASSWORD</p>
+<p>DECSS_SYNC_DATABASE_HOST</p>
+
+<p>DECSS_SYNC_DATABASE_NAME</p>
+
+<p>DECSS_SYNC_DATABASE_USER</p>
+
+<p>DECSS_SYNC_DATABASE_PASSWORD</p>
 
 <h3>
 <a name="secure-cookies" class="anchor" href="#secure-cookies"><span class="octicon octicon-link"></span></a>Secure Cookies</h3>
